tests/cases/conformance/decorators/invalid/decoratorOnAwait.ts
declare function dec<T>(target: T): T;

@dec
await 1
